<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_router"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/see_routers" />
        <item
            android:id="@+id/nav_search"
            android:visible="false"
            android:icon="@android:drawable/ic_search_category_default"
            android:title="@string/search_new_place" />
        <item
            android:id="@+id/nav_widget"
            android:visible="false"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/add_widget" />
    </group>

</menu>
